plugins {
    id 'java'
    id "org.sonarqube" version "4.4.1.3373"
    id "jacoco"
}

group 'com.maneesh'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacoco {
    toolVersion = "0.8.11"
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    reports {
        xml.required = true
    }
    dependsOn test // tests are required to run before generating the report
}

sonar {
    properties {
        property "sonar.projectKey", "maneesh54321_torrent"
        property "sonar.organization", "maneesh-singh"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.coverage.jacoco.xmlReportPath", layout.buildDirectory.dir('reports')
    }
}

dependencies {
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation 'com.dampcake:bencode:1.4'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}